<resources>
    <string name="app_name">Remote Worker</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email</string>
    <string name="password_8_digits_at_least">Password (8 digits at least)</string>
    <string name="personal_information">Personal information</string>
    <string name="phone_number">Phone Number:</string>
    <string name="_1">+1</string>
    <string name="birthday">Birthday:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="company_id">Company ID:</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="relation">Relation:</string>
    <string name="specify_friend_or_family">Specify friend or family</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_not_found">The user is not found</string>
    <string name="incorrect_password">Password is incorrect. Please try again</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="welcome">Welcome</string>
    <string name="if_you_have_an_account_with_us_press">If you have an account with us, press:</string>
    <string name="if_you_are_a_new_user_press">If you are a new user, press:</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_worksites">Worksites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="contacts">Contacts</string>
    <string name="site_info">Site Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="construction_site_name">Name:</string>
    <string name="project_id_worksite">Project ID:</string>
    <string name="master_point">Master point:</string>
    <string name="operation_hours">Operation hours:</string>
    <string name="site_emergency_and_response_information">Show site emergency and response information</string>
    <string name="location">Location</string>
    <string name="site_address">Site address:</string>
    <string name="open_in_google_map">Open in Google Map</string>
    <string name="sereem_account">Sereem Account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="invalid_email"><![CDATA[Invalid email format, use @<email>.<code>]]></string>
    <string name="invalid_number">Invalid phone format</string>
    <string name="enable_gps">Enable GPS visibility</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="step_1">STEP 1</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="step_2">STEP 2</string>
    <string name="choose_app_to_contact">Choose an app to contact</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="enter_password_to_delete_your_account">Enter password to delete your account:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm">CONFIRM</string>
    <string name="invalid_password">Password should be at least 6 characters</string>
    <string name="email_is_used">This email is used by another user</string>
    <string name="change_password">Change password</string>
    <string name="meetings">MEETINGS</string>
    <string name="chat">Chat</string>
    <string name="type_a_message_here">Type a message here…</string>
    <string name="email_empty">Email must be filled</string>
    <string name="password_empty">Password must be filled</string>
</resources>