<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_worksites">

    <fragment
        android:id="@+id/nav_worksites"
        android:name="com.example.project.ui.ui_for_main.worksites.WorksitesFragment"
        android:label="@string/menu_worksites"
        tools:layout="@layout/fragment_worksites" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.project.ui.ui_for_main.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.project.ui.ui_for_main.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>