<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="colorPalette"
            type="com.sereem.remoteworker.ui.ColorPalette" />
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui_for_main.worksites.SiteDetailActivity"
    android:background="@{colorPalette.background}">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/main_blue_color"
        app:tabSelectedTextColor="@color/main_blue_color"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/siteInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_info" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/locationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/contactsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabBar">
    </androidx.viewpager.widget.ViewPager>

</RelativeLayout>
</layout>